--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 django = "==4.2.4"
 psycopg = "==3.1.8"
 pandas = "==2.1.1"
+djangorestframework = "==3.14.0"
+django-cors-headers = "==4.2.0"
 
 [dev-packages]
 
