--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ psycopg = "==3.1.8"
 pandas = "==2.1.1"
 djangorestframework = "==3.14.0"
 django-cors-headers = "==4.2.0"
+djangorestframework-simplejwt = "==5.3.0"
 
 [dev-packages]
 
