--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pandas = "==2.1.1"
 djangorestframework = "==3.14.0"
 django-cors-headers = "==4.2.0"
 djangorestframework-simplejwt = "==5.3.0"
+django-rest-passwordreset = "==1.3.0"
 
 [dev-packages]
 
