--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ django==4.2.4
 djangorestframework==3.14.0
 django-cors-headers==4.2.0
 djangorestframework-simplejwt==5.3.0
+django-rest-passwordreset==1.3.0
 psycopg==3.1.8
 pandas==2.1.1
