--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-cors-headers = "==4.2.0"
 djangorestframework-simplejwt = "==5.3.0"
 django-rest-passwordreset = "==1.3.0"
 python-dotenv = "==1.0.0"
+gunicorn = "==21.2.0"
 
 [dev-packages]
 
