--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,19 +5,19 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
+    command: gunicorn dompet.wsgi:application -c ./dompet/gunicorn.conf.py
     ports:
       - 8000:8000
+    env_file:
+      - ./.env.prod
     depends_on:
       - db
   db:
     image: postgres:15
     volumes:
-      - <local dump path>:<container dump path>
       - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=
-      - POSTGRES_PASSWORD=
-      - POSTGRES_DB=
+    env_file:
+      - ./.env.db
 
 volumes:
   postgres_data:
