--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,10 @@ services:
       context: .
       dockerfile: Dockerfile
     command: gunicorn dompet.wsgi:application -c ./dompet/gunicorn.conf.py
-    ports:
-      - 8000:8000
+    volumes:
+      - static_volume:/dompet/static/
+    expose:
+      - 8000
     env_file:
       - ./.env.prod
     depends_on:
@@ -18,6 +20,17 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env.db
+  nginx:
+    build: 
+      context: ./nginx
+      dockerfile: Dockerfile
+    volumes:
+      - static_volume:/dompet/static/
+    ports:
+      - 80:80
+    depends_on:
+      - api
 
 volumes:
   postgres_data:
+  static_volume:
