--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream dompet {
+upstream api {
     server api:8000;
 }
 
@@ -7,7 +7,7 @@ server {
     server_name localhost;
 
     location /admin {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -15,11 +15,11 @@ server {
     }
 
     location /static/ {
-        alias ../static/;
+        alias /dompet/static/;
     }
 
     location /api/ {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
