--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,14 +12,15 @@ services:
       - 8000
     env_file:
       - ./.env.prod
-    depends_on:
-      - db
-  db:
-    image: postgres:15
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    env_file:
-      - ./.env.db
+    # depends_on:
+    #   - db
+  # db:
+  #   image: postgres:15
+  #   volumes:
+  #     - /home/cncheong/code/dompet/dump/:/var/lib/postgresql/dump/
+  #     - postgres_data:/var/lib/postgresql/data/
+  #   env_file:
+  #     - ./.env.db
   nginx:
     build: 
       context: ./nginx
@@ -27,10 +28,10 @@ services:
     volumes:
       - static_volume:/dompet/static/
     ports:
-      - 80:80
+      - 8080:80
     depends_on:
       - api
 
 volumes:
-  postgres_data:
+  # postgres_data:
   static_volume:
