--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==4.2.4"
-psycopg = "==3.1.8"
-djangorestframework = "==3.14.0"
-django-cors-headers = "==4.2.0"
-djangorestframework-simplejwt = "==5.3.0"
-django-rest-passwordreset = "==1.3.0"
-gunicorn = "==21.2.0"
+pydantic = "==2.9.2"
+psycopg2-binary = "==2.9.9"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.8"
