--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-django==4.2.4
-djangorestframework==3.14.0
-django-cors-headers==4.2.0
-djangorestframework-simplejwt==5.3.0
-django-rest-passwordreset==1.3.0
-psycopg==3.1.8
-gunicorn==21.2.0
+pydantic==2.9.2
+psycopg2_binary==2.9.9
